# LROOPLabs

./: README.md
FifthLab/: CMakeLists.txt  Myqueue.hpp  README.md  allocator.hpp  main.cpp  tests.cpp
firstLab/: CMakeLists.txt  README.md  main.cpp  tests.cpp  transformation.cpp  transformation.hpp
fourthLab/: CMakeLists.txt  README.md  Vector.hpp  figure.hpp  main.cpp  pentagon.hpp  point.hpp  romb.hpp  tests.cpp  trapezia.hpp
secondlab/: CMakeLists.txt  README.md  Three.cpp  Three.hpp  main.cpp  tests.cpp
seventhlab/: CMakeLists.txt  README.md  bear.cpp  bear.hpp  main.cpp  npc.cpp  npc.hpp  robber.cpp  tests.cpp  wolf.cpp  wolf.hpp
sixthlab/: CMakeLists.txt  README.md  bear.cpp  bear.hpp  main.cpp  npc.cpp  npc.hpp  robber.cpp  robber.hpp  tests.cpp  wolf.cpp  wolf.hpp
thirdLab/: CMakeLists.txt  Readme.md  Vector.cpp  figure.hpp  main.cpp  pentagon.cpp  pentagon.hpp  point.cpp  romb.cpp  romb.hpp  tests.cpp  trapezia.cpp  trapezia.hpp
